trunk/Archive2/03/5f438d54156faa/output
main.cpp: In function 'int main()':
main.cpp:9:47: error: 'std::vector<int>&' is not a class, struct, or union type
     std::priority_queue<int, std::vector<int>&> priotityq( container );
                                               ^
main.cpp:9:47: error: template argument 3 is invalid
main.cpp:9:58: error: invalid type in declaration before '(' token
     std::priority_queue<int, std::vector<int>&> priotityq( container );
                                                          ^
main.cpp:9:70: error: cannot convert 'std::vector<int>' to 'int' in initialization
     std::priority_queue<int, std::vector<int>&> priotityq( container );
                                                                      ^
main.cpp:11:5: error: 'priorityq' was not declared in this scope
     priorityq.push( 50 );
     ^
main.cpp:13:31: error: expected primary-expression before '<<' token
         std::cout << item <<  << " ";
                               ^
main.cpp:9:49: warning: unused variable 'priotityq' [-Wunused-variable]
     std::priority_queue<int, std::vector<int>&> priotityq( container );
                                                 ^
